[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[node name="main_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin_container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="root_vbox_container" type="VBoxContainer" parent="margin_container"]
margin_left = 100.0
margin_top = 50.0
margin_right = 924.0
margin_bottom = 718.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="title_margin_container" type="MarginContainer" parent="margin_container/root_vbox_container"]
margin_right = 824.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="title_vbox_container" type="VBoxContainer" parent="margin_container/root_vbox_container/title_margin_container"]
margin_right = 824.0
margin_bottom = 332.0

[node name="title_label" type="Label" parent="margin_container/root_vbox_container/title_margin_container/title_vbox_container"]
margin_right = 824.0
margin_bottom = 57.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "-= Cinco etapas =-"
align = 1
valign = 1

[node name="made_for_label" type="Label" parent="margin_container/root_vbox_container/title_margin_container/title_vbox_container"]
margin_top = 61.0
margin_right = 824.0
margin_bottom = 75.0
text = "Desarrollador para la Spain Game Devs Jam II"
align = 1

[node name="vbox_container" type="VBoxContainer" parent="margin_container/root_vbox_container"]
margin_top = 336.0
margin_right = 824.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="play_button" type="Button" parent="margin_container/root_vbox_container/vbox_container"]
margin_right = 824.0
margin_bottom = 20.0
text = "JUGAR"

[node name="credits_button" type="Button" parent="margin_container/root_vbox_container/vbox_container"]
margin_top = 50.0
margin_right = 824.0
margin_bottom = 70.0
text = "Cr√©ditos"

[node name="exit_button" type="Button" parent="margin_container/root_vbox_container/vbox_container"]
margin_top = 100.0
margin_right = 824.0
margin_bottom = 120.0
text = "Salir"
[connection signal="pressed" from="margin_container/root_vbox_container/vbox_container/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="margin_container/root_vbox_container/vbox_container/credits_button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="margin_container/root_vbox_container/vbox_container/exit_button" to="." method="_on_exit_button_pressed"]
